--- a/myapp/templates/bookappointment.html
+++ b/myapp/templates/bookappointment.html
@@ -230,8 +230,8 @@
         <div class="form-group col-md-4">
             <label for="payment_method">Payment Method:</label>
                 <select class="form-control" id="payment_method" name="payment_method" required>
-                    <option value="Male">cash deposit at lab</option>
-                    <option value="Female">payment during specimen pickup</option>
+                    <option value="cash_deposit_at_lab">cash deposit at lab</option>
+                    <option value="payment_during_specimen_pickup">payment during specimen pickup</option>
                 </select>
         </div>
 
